--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "express-session": "^1.11.3",
-    "bcrypt-nodejs": "0.0.3"
+    "bcrypt-nodejs": "0.0.3",
+    "csurf": "1.8.3"
   }
 }
